fix: add style on mobile footer on class footer-row: j-c: center

--- a/src/styles/fotnav-res.css
+++ b/src/styles/fotnav-res.css
@@ -87,6 +87,9 @@
         display: flex;
         justify-content: center;
     }
+    .footer-row{
+        justify-content: center;
+    }
 }
 @media screen and (max-width: 425px){
     /* navbar */
